--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,9 @@ dependencies = [
     "pandas>=1.3.0",
     "pydantic>=2.0.0",
     
+    # Symbolic execution - REQUIRED (was missing)
+    "z3-solver>=4.12.0",
+    
     # Cryptography and security
     "cryptography>=3.4.8",
     
