--- a/data/models/model_registry_config.toml
+++ b/data/models/model_registry_config.toml
@@ -1,9 +1,53 @@
 # VMDragonSlayer Model Registry Configuration
-# SQLite database schema for model management
+# Comprehensive model management system with versioning and lineage tracking
+
+[database]
+type = "sqlite"
+path = "data/models/model_registry.db"
+backup_enabled = true
+backup_interval = "daily"
+max_backups = 7
+
+[version_control_system]
+enabled = true
+git_backend = true
+git_repository = "models/.git"
+auto_commit = true
+commit_message_template = "Update model {model_name} v{version} - accuracy: {accuracy:.4f}"
+branch_strategy = "feature_branch"  # "main_branch", "feature_branch", "tag_based"
+tag_format = "v{version}"
+
+[model_lineage_tracking]
+enabled = true
+track_parent_models = true
+track_training_data = true
+track_feature_engineering = true
+dependency_graph = true
+provenance_logging = true
+
+[performance_metrics_history]
+enabled = true
+retention_days = 365
+metrics_to_track = [
+    "accuracy", "precision", "recall", "f1_score",
+    "inference_time", "memory_usage", "model_size",
+    "training_time", "convergence_epochs"
+]
+benchmark_datasets = [
+    "validation_set", "test_set", "cross_validation"
+]
+performance_thresholds = {
+    accuracy = 0.85,
+    precision = 0.80,
+    recall = 0.80,
+    f1_score = 0.80,
+    inference_time_ms = 1000,
+    memory_usage_mb = 512
+}
 
 [models]
 # Model metadata table
-table_name = model_registry
+table_name = "model_registry"
 schema = """
 CREATE TABLE IF NOT EXISTS model_registry (
     id INTEGER PRIMARY KEY AUTOINCREMENT,
@@ -11,6 +55,7 @@ CREATE TABLE IF NOT EXISTS model_registry (
     model_name TEXT NOT NULL,
     model_type TEXT NOT NULL,  -- 'classifier', 'detector', 'ensemble'
     version TEXT NOT NULL,
+    parent_model_id TEXT,      -- For model lineage
     file_path TEXT NOT NULL,
     file_size INTEGER,
     created_date TEXT NOT NULL,
@@ -22,12 +67,97 @@ CREATE TABLE IF NOT EXISTS model_registry (
     training_samples INTEGER,
     validation_samples INTEGER,
     feature_count INTEGER,
-    model_parameters TEXT,  -- JSON string
-    training_config TEXT,   -- JSON string
-    metadata TEXT,          -- JSON string
-    status TEXT DEFAULT 'active',  -- 'active', 'deprecated', 'testing'
+    model_parameters TEXT,     -- JSON string
+    training_config TEXT,      -- JSON string
+    feature_config TEXT,       -- JSON string  
+    metadata TEXT,             -- JSON string
+    status TEXT DEFAULT 'active',  -- 'active', 'deprecated', 'testing', 'archived'
     checksum TEXT,
-    created_by TEXT DEFAULT 'system'
+    git_commit_hash TEXT,      -- Git commit for version tracking
+    created_by TEXT DEFAULT 'system',
+    tags TEXT,                 -- JSON array of tags
+    deployment_ready BOOLEAN DEFAULT FALSE,
+    benchmark_score REAL,
+    model_complexity TEXT,     -- 'simple', 'medium', 'complex'
+    FOREIGN KEY (parent_model_id) REFERENCES model_registry(model_id)
+);
+"""
+
+[model_versions]
+# Model version history table
+table_name = "model_versions"
+schema = """
+CREATE TABLE IF NOT EXISTS model_versions (
+    id INTEGER PRIMARY KEY AUTOINCREMENT,
+    model_id TEXT NOT NULL,
+    version TEXT NOT NULL,
+    version_type TEXT NOT NULL, -- 'major', 'minor', 'patch'
+    changelog TEXT,
+    created_date TEXT NOT NULL,
+    file_path TEXT NOT NULL,
+    file_size INTEGER,
+    checksum TEXT,
+    git_commit_hash TEXT,
+    performance_delta TEXT,     -- JSON with performance comparison
+    backward_compatible BOOLEAN DEFAULT TRUE,
+    deprecated BOOLEAN DEFAULT FALSE,
+    deprecation_date TEXT,
+    replacement_version TEXT,
+    FOREIGN KEY (model_id) REFERENCES model_registry(model_id)
+);
+"""
+
+[model_lineage]
+# Model lineage and dependency tracking
+table_name = "model_lineage"
+schema = """
+CREATE TABLE IF NOT EXISTS model_lineage (
+    id INTEGER PRIMARY KEY AUTOINCREMENT,
+    child_model_id TEXT NOT NULL,
+    parent_model_id TEXT NOT NULL,
+    relationship_type TEXT NOT NULL, -- 'derived_from', 'ensemble_component', 'transfer_learning'
+    influence_weight REAL DEFAULT 1.0,
+    created_date TEXT NOT NULL,
+    metadata TEXT,              -- JSON string
+    FOREIGN KEY (child_model_id) REFERENCES model_registry(model_id),
+    FOREIGN KEY (parent_model_id) REFERENCES model_registry(model_id),
+    UNIQUE(child_model_id, parent_model_id, relationship_type)
+);
+"""
+
+[training_data_tracking]
+# Training data lineage and versioning
+table_name = "training_data_versions"
+schema = """
+CREATE TABLE IF NOT EXISTS training_data_versions (
+    id INTEGER PRIMARY KEY AUTOINCREMENT,
+    data_version_id TEXT UNIQUE NOT NULL,
+    dataset_name TEXT NOT NULL,
+    version TEXT NOT NULL,
+    file_path TEXT NOT NULL,
+    sample_count INTEGER,
+    feature_count INTEGER,
+    label_distribution TEXT,   -- JSON string
+    data_hash TEXT NOT NULL,
+    created_date TEXT NOT NULL,
+    preprocessing_steps TEXT,   -- JSON string
+    quality_metrics TEXT,       -- JSON string
+    source_info TEXT           -- JSON string
+);
+"""
+
+[model_data_mapping]
+# Mapping between models and training data versions
+table_name = "model_data_mapping"
+schema = """
+CREATE TABLE IF NOT EXISTS model_data_mapping (
+    id INTEGER PRIMARY KEY AUTOINCREMENT,
+    model_id TEXT NOT NULL,
+    data_version_id TEXT NOT NULL,
+    usage_type TEXT NOT NULL,  -- 'training', 'validation', 'testing'
+    created_date TEXT NOT NULL,
+    FOREIGN KEY (model_id) REFERENCES model_registry(model_id),
+    FOREIGN KEY (data_version_id) REFERENCES training_data_versions(data_version_id)
 );
 """
 
