--- a/data/training/training_config.json
+++ b/data/training/training_config.json
@@ -1,4 +1,98 @@
 {
+  "data": {
+    "data_sources": [
+      {
+        "type": "directory",
+        "path": "data/samples",
+        "description": "Labeled binary samples organized by VM type"
+      },
+      {
+        "type": "json",
+        "path": "data/samples/sample_registry.json",
+        "description": "Sample metadata and labels"
+      }
+    ]
+  },
+  "features": {
+    "feature_types": [
+      "file_stats",
+      "entropy", 
+      "byte_distribution",
+      "ngrams",
+      "opcodes"
+    ],
+    "cache_features": true,
+    "cache_dir": "data/feature_cache",
+    "feature_selection": {
+      "enabled": true,
+      "method": "SelectKBest",
+      "k": 1000
+    }
+  },
+  "training": {
+    "test_size": 0.2,
+    "random_state": 42,
+    "models": {
+      "random_forest": {
+        "type": "random_forest",
+        "parameters": {
+          "n_estimators": 100,
+          "max_depth": 20,
+          "min_samples_split": 5,
+          "min_samples_leaf": 2,
+          "random_state": 42,
+          "n_jobs": -1
+        }
+      },
+      "gradient_boosting": {
+        "type": "gradient_boosting", 
+        "parameters": {
+          "n_estimators": 100,
+          "learning_rate": 0.1,
+          "max_depth": 10,
+          "random_state": 42
+        }
+      },
+      "neural_network": {
+        "type": "neural_network",
+        "parameters": {
+          "hidden_layer_sizes": [256, 128, 64],
+          "activation": "relu",
+          "solver": "adam",
+          "alpha": 0.001,
+          "batch_size": 32,
+          "learning_rate": "adaptive",
+          "max_iter": 500,
+          "random_state": 42
+        }
+      },
+      "svm": {
+        "type": "svm",
+        "parameters": {
+          "C": 1.0,
+          "kernel": "rbf",
+          "gamma": "scale",
+          "probability": true,
+          "random_state": 42
+        }
+      }
+    }
+  },
+  "validation": {
+    "n_folds": 5,
+    "random_state": 42,
+    "metrics": [
+      "accuracy",
+      "precision", 
+      "recall",
+      "f1_score"
+    ]
+  },
+  "output": {
+    "model_format": "joblib",
+    "include_metadata": true,
+    "model_registry_update": true
+  },
   "training_datasets": {
     "bytecode_classification": {
       "description": "Training data for VM bytecode pattern classification",
